--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>AR.js Hello World Example</title>
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-        <script type='text/javascript' src='../../../build/aframe-ar-nft.js'></script>
+        <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
     </head>
     <body>
     <a-scene
