--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'
         renderer='antialias: true; alpha: true'>
             <a-camera gps-camera rotation-reader></a-camera>
-            <a-box gps-entity-place='latitude: your-latitude; longitude: your-longitude' color='red' scale='20 20 20'></a-box>
+            <a-box gps-entity-place='latitude: 31; longitude: 131' color='red' scale='20 20 20'></a-box>
     </a-scene>
     </body>
 </html>
