--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <a-camera gps-camera rotation-reader></a-camera>
             <a-box gps-entity-place='latitude: 31; longitude: 131' color='red' scale='20 20 20'></a-box>
     </a-scene>
-    </body>
+
+    <a-assets>
+  <a-asset-item
+    id="asset-eevee"
+    src="model/eevee.gltf">
+  </a-asset-item>
+  </body>
 </html>
 
