--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <a-assets>
   <a-asset-item
-    id="asset-eevee"
-    src="model/eevee.gltf">
+    id="asset-slim"
+    src="model/slim_3Dmodel.glb">
   </a-asset-item>
   </body>
 </html>
