--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
-<!DOCTYPE html>
-<html> 
-    <head>
-        <title>AR.js Hello World Example</title>
-        <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-        <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
-    </head>
-    <body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <link rel="stylesheet" href="../style.css">
+    <title>SLIM 3D</title>
+  </head>
+
+  <body style="margin: 0; overflow: hidden;">
+    <div class="centered">
+      <div class="info">...</div>
+    </div>
+
     <a-scene
-        vr-mode-ui="enabled: false"
-        arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'
-        renderer='antialias: true; alpha: true'>
-            <a-camera gps-camera rotation-reader></a-camera>
-            <a-box gps-entity-place='latitude: 31; longitude: 131' color='red' scale='20 20 20'></a-box>
+      vr-mode-ui="enabled: false;"
+      loading-screen="enabled: false;"
+      renderer="logarithmicDepthBuffer: true;"
+      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+      embedded
+    >
+      <a-assets>
+        <a-asset-item
+          id="asset-SLIM"
+          src="model/assets/eevee.gltf">
+        </a-asset-item>
+        
+      <a-camera
+        gps-camera='gpsMinDistance: 10' 
+        arjs-look-controls='smoothingFactor: 0.1'
+        rotation-reader
+      ></a-camera>
     </a-scene>
 
-    <a-assets>
-  <a-asset-item
-    id="asset-slim"
-    src="model/slim_3Dmodel.glb">
-  </a-asset-item>
+    <div class="centered command">
+      <button class="btn" data-action="change"></button>
+    </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
-
