--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a-assets>
         <a-asset-item
           id="asset-SLIM"
-          src="model/assets/eevee.gltf">
+          src="model/slim_3Dmodel.glb">
         </a-asset-item>
         
       <a-camera
