--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <button class="btn" data-action="change"></button>
     </div>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
