--- a/index.html
+++ b/index.html
@@ -1,44 +1,28 @@
-<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <link rel="stylesheet" src="style.css">
-    <title>SLIM 3D</title>  
+    <!-- A-Frameを読み込む -->
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <!-- AR.jsを読み込む -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
-
-  <body style="margin: 0; overflow: hidden;">
-    <div class="centered">
-      <div class="info">...</div>
-    </div>
-
-    <a-scene
-      vr-mode-ui="enabled: false;"
-      loading-screen="enabled: false;"
-      renderer="logarithmicDepthBuffer: true;"
-      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-      embedded
-    >
+  <body style="margin: 0; overflow: hidden">
+    <!-- シーンの作成、VRモードのUI非表示 -->
+    <a-scene embedded arjs vr-mode-ui="enabled: false">
       <a-assets>
-        <a-asset-item
-          id="asset-SLIM"
-          src="model/slim_3Dmodel.glb">
-        </a-asset-item>
-        
-      <a-camera
-        gps-camera='gpsMinDistance: 10' 
-        arjs-look-controls='smoothingFactor: 0.1'
-        rotation-reader
-      ></a-camera>
+        <!-- 3Dモデルを読み込む -->
+        <a-asset-item id="SLIM" src="chaei.glb" scale="1 1 1"></a-asset-item>
+      </a-assets>
+      <!-- マーカーを設定する -->
+      <a-marker type="pattern" url="hiro.patt">
+        <!-- 3Dモデルを呼び出す -->
+        <a-entity gltf-model="#SLIM" rotation="-90 0 0"></a-entity>
+      </a-marker>
+      <!-- カメラを追加 -->
+      <a-entity camera></a-entity>
     </a-scene>
-
-    <div class="centered command">
-      <button class="btn" data-action="change"></button>
-    </div>
-
-    <script src="app.js"></script>
   </body>
+  <script>
+      //glTFの表示が暗くなる問題に対処
+      document.querySelector("a-scene").renderer.gammaOutput=true;
+  </script>
 </html>
