--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene embedded arjs vr-mode-ui="enabled: false">
       <a-assets>
         <!-- 3Dモデルを読み込む -->
-        <a-asset-item id="SLIM" src="chaei.glb" scale="1 1 1"></a-asset-item>
+        <a-asset-item id="SLIM" src="model/slim_3Dmodel.glb" scale="1 1 1"></a-asset-item>
       </a-assets>
       <!-- マーカーを設定する -->
       <a-marker type="pattern" url="hiro.patt">
