--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-asset-item id="SLIM" src="model/slim_3Dmodel.glb" scale="1 1 1"></a-asset-item>
       </a-assets>
       <!-- マーカーを設定する -->
-      <a-marker type="pattern" url="hiro.patt">
+      <a-marker type="pattern" url="pattern-marker.patt">
         <!-- 3Dモデルを呼び出す -->
         <a-entity gltf-model="#SLIM" rotation="-90 0 0"></a-entity>
       </a-marker>
