--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-asset-item id="SLIM" src="model/slim_3Dmodel.glb" scale="2 2 2"></a-asset-item>
       </a-assets>
       <!-- マーカーを設定する -->
-      <a-marker type="pattern" url="pattern/pattern-marker.patt">
+      <a-marker type="pattern" url="pattern/pattern-marker2.patt">
         <!-- 3Dモデルを呼び出す -->
         <a-entity gltf-model="#SLIM" rotation="90 90 90"></a-entity>
       </a-marker>
