--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       <!-- マーカーを設定する -->
       <a-marker type="pattern" url="pattern/pattern-marker2.patt">
         <!-- 3Dモデルを呼び出す -->
-        <a-entity gltf-model="#SLIM" rotation="90 90 90"></a-entity>
+        <a-entity   position="0 0 0" 
+                    rotation="0 0 0"
+                    scale="1 1 1"
+                    gltf-model="#SLIM" >
+        </a-entity>
+
+        
       </a-marker>
       <!-- カメラを追加 -->
       <a-entity camera></a-entity>
