--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
-<html>
-  <head>
-    <!-- A-Frameを読み込む -->
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <!-- AR.jsを読み込む -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body style="margin: 0; overflow: hidden">
-    <!-- シーンの作成、VRモードのUI非表示 -->
-    <a-scene embedded arjs vr-mode-ui="enabled: false">
-      <a-assets>
-        <!-- 3Dモデルを読み込む -->
-        <a-asset-item id="SLIM" src="model/slim_3Dmodel.glb" scale="2 2 2"></a-asset-item>
-      </a-assets>
-      <!-- マーカーを設定する -->
-      <a-marker type="pattern" url="pattern/pattern-marker2.patt">
-        <!-- 3Dモデルを呼び出す -->
-        <a-entity   position="0 0 0" 
-                    rotation="0 0 0"
-                    scale="1 1 1"
-                    gltf-model="#SLIM" >
-        </a-entity>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        
-      </a-marker>
-      <!-- カメラを追加 -->
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
-  <script>
-      //glTFの表示が暗くなる問題に対処
-      document.querySelector("a-scene").renderer.gammaOutput=true;
+  <!-- Loads <model-viewer> for modern browsers: -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
   </script>
+  <!-- Loads <model-viewer> for old browsers like IE11: -->
+  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+
+  </script>
+  <title>WebAR for All Browsers</title>
+  <style>
+  h1 {
+    text-align: center;
+    font-size: 1.4rem;
+  }
+  .wrapper {
+    max-width: 640px;
+    margin: 0 auto;
+  }
+  .ar-model {
+    margin: 0 auto;
+    max-width: 600px;
+    height: 400px;
+  }
+  .ar-caption {
+    text-align: center;
+  }
+  img {
+    max-width: 100%;
+  }
+  .ar-text {
+    padding: 0 1rem;
+  }
+  </style>
+</head>
+<body>
+<div class="wrapper">
+  <h1>WebAR by Model Viewer</h1>
+  <figure class="ar-img">
+    <model-viewer class="ar-model" src="model/earth_ball.gltf" ios-src="modelg/earth_ball.usdz" auto-rotate camera-controls ar alt="SLIM"></model-viewer>
+    <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
+  </figure>
+  <p class="ar-text">model-viewerはほぼ全てのブラウザーでAR体験を可能にします。</p>
+</div>
+</body>
 </html>
