--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="wrapper">
   <h1>WebAR by Model Viewer</h1>
   <figure class="ar-img">
-    <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.glb" auto-rotate camera-controls ar alt="SLIM"></model-viewer>
+    <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls ar alt="SLIM"></model-viewer>
     <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
   </figure>
   <p class="ar-text">model-viewerはほぼ全てのブラウザーでAR体験を可能にします。</p>
