--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls ar alt="SLIM"></model-viewer>
     <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
   </figure>
-  <p class="ar-text">model-viewerはほぼ全てのブラウザーでAR体験を可能にします。</p>
+  <p class="ar-text">小型月面着陸実証機SLIMの3DmodelはJAXA提供</p>
 </div>
 </body>
 </html>
