--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   .wrapper {
     max-width: 640px;
     margin: 0 auto;
+    background-color: greenyellow;
   }
   .ar-model {
     margin: 0 auto;
