--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 <div class="wrapper">
   <h1>WebAR by Model Viewer</h1>
   <figure class="ar-img">
-    <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls ar alt="SLIM"></model-viewer>
+    <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls 
+      shadow-intensity = 1
+      shadow-softness = 0
+      ar alt="SLIM"></model-viewer>
     <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
   </figure>
   <p class="ar-text">小型月面着陸実証機SLIMの3DmodelはJAXA提供</p>
