--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <div class="wrapper">
-  <h1>WebAR by Model Viewer</h1>
+  <h1>WebAR SLIM by Model Viewer</h1>
   <figure class="ar-img">
     <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls 
       shadow-intensity = 1
