--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   .wrapper {
     max-width: 640px;
     margin: 0 auto;
-    background-color: greenyellow;
+    background-color: white;
   }
   .ar-model {
     margin: 0 auto;
@@ -53,7 +53,7 @@
       shadow-intensity = 1
       shadow-softness = 0
       ar alt="SLIM">
-    <button id="custom-ar-button" slot="ar-button">Start AR</button>
+    <button id="custom-ar-button" slot="ar-button">Start SLIM AR</button>
     </model-viewer>
     <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
   </figure>
