--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   .wrapper {
     max-width: 640px;
     margin: 0 auto;
-    background-color: white;
+    background-color: black;
   }
   .ar-model {
     margin: 0 auto;
