--- a/index.html
+++ b/index.html
@@ -51,13 +51,55 @@
   <figure class="ar-img">
     <model-viewer class="ar-model" src="model/slim_3Dmodel.glb" ios-src="model/slim_3Dmodel.usdz" auto-rotate camera-controls 
       shadow-intensity = 1
-      shadow-softness = 0
+      shadow-softness = 1
       ar alt="SLIM">
     <button id="custom-ar-button" slot="ar-button">Start AR</button>
     </model-viewer>
     <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
   </figure>
   <p class="ar-text">小型月面着陸実証機SLIMの3DmodelはJAXA提供</p>
+
+  var cameraFacing = false;
+
+// clickイベントリスナーで、切り替えボタンがタップされた時に切り替えを行う。
+change_btn.addEventListener("click", function(e){
+
+    e.preventDefault();
+
+    var vi = document.querySelector('video');
+    const mode = cameraFacing ? "environment" : "user";
+
+    // フロントカメラをそのまま使うと、左右反転してしまうので、activeクラスとcssでミラー処理
+    cameraFacing ? document.querySelector('video').classList.remove("active") : document.querySelector('video').classList.add("active");
+    // canvasはAR.jsを使っている時
+    cameraFacing ? document.querySelector('canvas').classList.remove("active") : document.querySelector('canvas').classList.add("active");
+
+    // Android Chromeでは、セッションを一時停止しないとエラーが出ることがある
+    stopStreamedVideo(vi);
+
+    // カメラ切り替え
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: mode } })
+            .then(stream => vi.srcObject = stream)
+            .catch(err => alert(`${err.name} ${err.message}`));
+
+    cameraFacing = !cameraFacing;
+});
+
+// videoセッション一時停止
+function stopStreamedVideo(videoElem) {
+    let stream = videoElem.srcObject;
+    let tracks = stream.getTracks();
+
+    tracks.forEach(function(track) {
+        track.stop();
+    });
+
+    videoElem.srcObject = null;
+}
+
+
+  
+  
 </div>
 </body>
 </html>
